[package]
name = "mqtt-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
mqtt-sync-publisher = { path = "./mqtt-sync-publisher" }
mqtt-sync-subscriber = { path = "./mqtt-sync-subscriber" }
mqtt-async-subscriber = { path = "./mqtt-async-subscriber" }
mqtt-async-publisher = { path = "./mqtt-async-publisher" }
paho-mqtt = "0.12"
futures-util = "0.3.28"
futures = "0.3.28"
